[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaflood-continuous"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "cmf",
    "shapely==1.8.5",
    "pyshp",
    "matplotlib",
    "openpyxl",
]

[tool.uv]
