[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leaflood-continuous"
version = "0.1.0"
description = ""
readme = "readme.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "cmf",
    "shapely>=2.0",
    "pyshp",
    "matplotlib",
    "openpyxl",
]

[tool.setuptools]
py-modules = ["LEAFlood"]

[tool.uv]
